--- a/GWC/index.html
+++ b/GWC/index.html
@@ -5,6 +5,17 @@
     </head>
 
     <body>
+        <!-- navigation -->
+        <nav>
+            <div class="logoGWC"><a href="./about.html"><img src="logo2.png"></a></div>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./officers.html">Officers</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./resources.html">Resources</a></li>
+                </ul>
+        </nav>
+        <!-- end of navigation -->
         <div class="header">
             <a href = "index.html" ><img src="logo2.png" alt="girlsWhoCodeLogo"
                 width = "400"
